--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -265,6 +265,17 @@ body {
     position: absolute;
     right: 0px;
   }
+  div.unread_messages_count {
+    font-size: 10px;
+    line-height: 100%;
+    text-align: center;
+    right: -8px;
+    bottom: -6px;
+    padding: 0.2em;
+    border-radius: 2px;
+    background-color: #500;
+    color: white;
+  }
 
 }
 
