--- a/profapp/templates/company/company_base_angular.html
+++ b/profapp/templates/company/company_base_angular.html
@@ -46,9 +46,9 @@
             <div class="row">
                 <div ng-if="company.own_portal" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 menu-company
                 menu-company-portal">
-                    <a ng-class="{'selected': selected_company_menu == 'portal_banners'}"
+                    <a ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_banners'}"
                        href="{{ url_portal_banners({company_id: company.id}) }}">{{ _('Banners') }}</a>
-                    <a ng-class="{'selected': selected_company_menu == 'portal_tags'}"
+                    <a ng-if="company.author_user_id == user.id" ng-class="{'selected': selected_company_menu == 'portal_tags'}"
                        href="{{ url_portal_tags({company_id: company.id}) }}">{{ _('Tags') }}</a>
                     <a ng-class="{'selected': selected_company_menu == 'publications'}"
                        id="publications"
