--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -572,8 +572,17 @@ body {
   margin-bottom: 50px;
 }
 
-.company-list {
+.pr-external-link {
+  margin-left: 0.5em;
+}
+
+.employment_company-list {
   margin-top: 30px;
+
+  button a {
+    color: #fff;
+  }
+
   h3 {
     color: #383838;
     margin-bottom: 15px;
