--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -2,6 +2,7 @@
 {% block title %}Profireader - {{ _('Companies') }}{% endblock title %}
 {% block head %}
     {{ super() }}
+    {% include '_ruslan/partials/_header_files_infinite-scroll.html' %}
 {% endblock head %}
 
 {% block portal_content %}
@@ -11,8 +12,13 @@
             angularControllerFunction('user_controller', 'set_selected_user_menu')('companies');
             $scope.url_company_profile = {{ raw_url_for('company.profile')|safe }};
             $scope.url_search_for_company = {{ raw_url_for('company.search_for_company_to_join')|safe }};
+            $scope.load_employments_url = {{ raw_url_for('company.companies_load')|safe }};
             $scope.url_join = {{ raw_url_for('company.join_to_company')|safe }};
+            $scope.me_user_id = '{{ g.user.id }}';
             $scope.$$translate = {{ translates('companies_list')|safe }};
+
+            $scope.employments = [];
+
             $scope.search_text = '';
             $scope.next_page = 1;
             $scope.table = true;
@@ -20,12 +26,13 @@
             $scope.selectedCompany = null;
             $scope.selectedCompany_sending = false;
 
+            $scope.employments_there_is_more = true;
+            $scope.employments_loading = false;
+
             $scope.createCompany = function () {
                 window.location.href = '{{ url_for('company.update')|safe }}'
             };
-            $scope.goToPortal = function (host) {
-                window.location.href = 'http://' + host
-            };
+
 
             $scope.onSelect = function ($item, $model, $label) {
                 if (!$item || !$item.id) {
@@ -68,17 +75,32 @@
                     $scope.data_search = [];
                     $scope.data['companies'] = resp['companies'];
                     $timeout(function () {
-                        scrool('#joined_company_' + company_id);
+//  TODO: OZ by OZ: fix id
+                        scrool('#employment_' + company_id);
                         highlight('#joined_company_56187294-164b-4001-a603-7614f897601e')
                     }, 500);
                     $scope.selectedCompany_sending = false;
                 });
             };
 
-            $scope.loadNextPage('{{ url_for('company.companies_load')|safe }}', function (resp) {
-                $scope.data.companies = $scope.data.companies ? $scope.data.companies : [];
-                $scope.data.companies = $scope.data.companies.concat(resp['companies']);
-            });
+            $scope.load_employments = function () {
+                if ($scope.employments_loading) {
+                    return;
+                }
+                $scope.employments_loading = true;
+
+                $ok($scope.load_employments_url(), {}, function (resp) {
+                    $scope.employments.push.apply($scope.employments, resp['employments']);
+                    $scope.employments_there_is_more = resp['there_is_more'];
+                }).finally(function () {
+                    $scope.employments_loading = false;
+                });
+            };
+
+            {#            $scope.loadNextPage($scope.load_employments_url(), function (resp) {#}
+            {#                $scope.data.companies = $scope.data.companies ? $scope.data.companies : [];#}
+            {#                $scope.data.companies = $scope.data.companies.concat(resp['companies']);#}
+            {#            });#}
 
             if ($(document).width() < 764) {
                 $scope.table = false;
@@ -87,7 +109,7 @@
         }]);
     </script>
     {% raw %}
-    <div class="container" ng-init="loadData()" ng-controller="companies_list" ng-cloak>
+    <div class="container" ng-init="load_employments()" ng-controller="companies_list" ng-cloak>
         <div class="row join-company">
             <div class="col-lg-3 create-company pull-right">
                 <button pr-test="CreateNewCompany" class="btn btn-default" type="button" ng-click='createCompany()'
@@ -150,17 +172,19 @@
                 </div>
             </div>
         </div>
+
         <div ng-if="data_search.company_list.length>0 && !data_search.end && selectedCompany_name" class="show-more">
             <h4><a class="link"
                    ng-click="show_more()">{{
                 _('Show more search results') }}</a></h4></div>
-        <div class="row company-list">
+
+        <div class="row employment_company-list">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    <h3 ng-if="data.companies.length>0">
+                    <h3 ng-if="employments.length > 0">
                         <div>{{ _('Your company list') }}:</div>
                     </h3>
-                    <h3 ng-if="data.companies.length===0 && !loading">
+                    <h3 ng-if="employments.length===0 && !employments_loading">
                         <div>{{ _('You haven\'t got any company yet!Create own or join to!') }}</div>
                     </h3>
                 </div>
@@ -172,59 +196,75 @@
                 </div>
             </div>
 
-            <div ng-if="data.companies && table == false" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-company"
-                 ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
-                <a href="{{ url_company_profile({company_id: my_employer.id}) }}">
-                    <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
-                        <img pr-image-url="{{ my_employer.logo.url }}" alt="image" style="width: 100%;">
-                    </div>
-                    <div class="col-lg-9 col-md-8 col-sm-8 col-xs-7">
-                        <h5 class="ellipsis">{{ _('%(name)s' , my_employer) }}</h5>
-                        <p class="join-own">{{ _((my_employer.author_user_id==data.user_id? 'own':'joined') ,
-                            my_employer) }}</p>
-                    </div>
-                </a>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                    <p class="portal" ng-if="!my_employer.own_portal.host">{{_('Portals')}}: {{_('No')}}</p>
-                    <button class="portal btn" ng-if="my_employer.own_portal.host" type="button"
-                            ng-click="goToPortal(my_employer.own_portal.host)">
-                        {{_("Go to portal") }}
-                    </button>
-                </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                    style="background-color: red"
+                 infinite-scroll="load_employments()"
+                 infinite-scroll-disabled="employments_loading !== false || !employments_there_is_more"
 
-            </div>
+                    >
 
-
-            <div ng-if="data.companies && table == true" class="col-lg-4 col-md-4 col-sm-6 col-xs-12"
-                 ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
-                <div class="thumbnail company-thumbnail">
-                    <a ng-if="my_employer.employment_status=='ACTIVE'"
-                       href="{{ url_company_profile({company_id: my_employer.id}) }}">
-                        <img pr-image-url="{{ my_employer.logo.url }}" alt="image" style="width: 300px; height: 200px;">
-                    </a>
-                    <span ng-if="my_employer.employment_status!='ACTIVE'">
-                        <img pr-image-url="{{ my_employer.logo.url }}" alt="image" style="width: 300px; height: 200px;">
-                    </span>
-                    <div pr-test="SomeCompanyInfo" class="caption some-company-info">
-
-                        <a ng-if=""my_employer.employment_status=='ACTIVE'" pr-test="YourCompanyListTitles"
-                           href="{{ url_company_profile({company_id: my_employer.id}) }}">
-                            <h3 class="ellipsis">{{ _('%(name)s' , my_employer) }}</h3>
-                        </a>
-                        <span ng-if=""my_employer.employment_status!='ACTIVE'" pr-test="YourCompanyListTitles">
-                            <h3 class="ellipsis">{{ _('%(name)s' , my_employer) }}</h3>
-                        </span>
-                        <p pr-test="JoinedCompany">{{ (my_employer.author_user_id==data.user_id)? _('Type: OWN
-                            COMPANY'):_('JOINED COMPANY with status %(status)s', {'status': my_employer.employment_status })  }}</p>
-                        <span ng-if="!my_employer.own_portal.host"><b>{{_('Portals')}}: </b>{{_('No')}}</span>
-                        <div ng-if="my_employer.own_portal.host">
-                            <button pr-test="GoToPortalButton" class="btn btn-default" type="button"
-                                    ng-click="goToPortal(my_employer.own_portal.host)">{{ _("Go to portal") }}
-                            </button>
+                <div ng-if="employments && table == false" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-company"
+                     ng-repeat="employment in employments" id="employment_{{ employments.id }}">
+                    <a href="{{ url_company_profile({company_id: employment.company.id}) }}">
+                        <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
+                            <img pr-image-url="{{ employment.company.logo.url }}" alt="image" style="width: 100%;">
                         </div>
+                        <div class="col-lg-9 col-md-8 col-sm-8 col-xs-7">
+                            <h5 class="ellipsis">{{ _('%(name)s' , employment.company) }}</h5>
+                            <p class="join-own">{{ _(employment.company.author_user_id==me_user_id? 'own':'joined')
+                                }}</p>
+                        </div>
+                    </a>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                        <p class="portal" ng-if="!employment.company.own_portal.host">{{_('Portals')}}: {{_('No')}}</p>
+                        <a href="//{{ employment.company.own_portal.host }}" target="_blank">
+                            <button class="portal btn" ng-if="employment.company.own_portal.host" type="button">
+                                {{_("Go to portal") }}<span class="fa fa-external-link pr-external-link"></span>
+                            </button>
+                        </a>
+                    </div>
 
+                </div>
+
+
+                <div ng-if="employments && table == true" class="col-lg-4 col-md-4 col-sm-6 col-xs-12"
+                     ng-repeat="employment in employments" id="employment_{{ employment.id }}">
+                    <div class="thumbnail company-thumbnail">
+                        <a ng-if="employment.status=='ACTIVE'"
+                           href="{{ url_company_profile({company_id: employment.company.id}) }}">
+                            <img pr-image-url="{{ employment.company.logo.url }}" alt="image"
+                                 style="width: 300px; height: 200px;">
+                        </a>
+                    <span ng-if="employment.status!='ACTIVE'">
+                        <img pr-image-url="{{ employment.company.logo.url }}" alt="image"
+                             style="width: 300px; height: 200px;">
+                    </span>
+                        <div pr-test="SomeCompanyInfo" class="caption some-company-info">
+
+                            <a ng-if="employment.status=='ACTIVE'" pr-test="YourCompanyListTitles"
+                               href="{{ url_company_profile({company_id: employment.company.id}) }}">
+                                <h3 class="ellipsis">{{ _('%(name)s' , employment.company) }}</h3>
+                            </a>
+                        <span ng-if="employment.status!='ACTIVE'" pr-test="YourCompanyListTitles">
+                            <h3 class="ellipsis">{{ _('%(name)s' , employment.company) }}</h3>
+                        </span>
+                            <p pr-test="JoinedCompany">{{ (employment.company.author_user_id==me_user_id)? _('Type: OWN
+                                COMPANY'):_('JOINED COMPANY with status %(status)s', {'status': employment.status })
+                                }}</p>
+                            <span ng-if="!employment.company.own_portal.host"><b>{{_('Portals')}}: </b>{{_('No')}}</span>
+                            <div ng-if="employment.company.own_portal.host">
+                                <a href="//{{ employment.company.own_portal.host }}" target="_blank">
+                                    <button pr-test="GoToPortalButton" class="btn btn-default" type="button">
+                                        {{_("Go to portal") }}<span class="fa fa-external-link pr-external-link"></span>
+                                    </button>
+                                </a>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
+
+
             </div>
         </div>
     </div>
