--- a/profapp/templates/company/portal_banners.html
+++ b/profapp/templates/company/portal_banners.html
@@ -34,30 +34,30 @@
             };
         });
 
-        module.controller('portal_banners', function ($scope, $ok, $uibModal) {
+        module.controller('portal_banners', function ($scope, $ok, $uibModal, $confirm) {
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('portal_banners');
             $scope.$$translate = {{translates('company_partners') | safe}};
             $scope.url_banners = '{{ url_for('portal.portal_banners_load', company_id=company.id)}}';
             $scope.url_save_banners = {{ raw_url_for('portal.save_portal_banner')|safe }};
-            $scope.company = {{ company.get_client_side_dict()|safe }}
-                    {% raw %}
+            $scope.company = {{ company.get_client_side_dict()|safe }};
 
-                    $scope.showModalForEdit = function (row, col, text) {
+            {% raw %}
+            $scope.showModalForEdit = function (row, col, text) {
 
-                        var modalInstance = $uibModal.open({
-                            templateUrl: 'banners.html',
-                            controller: 'banners_controller',
-                            resolve: {
-                                'EdittextWithHtml': function () {
-                                    console.log(row.entity.html)
-                                    return row.entity.html
-                                }
-                            }
-                        });
-                        modalInstance.result.then(function (returnedtext) {
-                            $scope.saveTranslWithHtml(returnedtext, row, col);
-                        });
-                    };
+                var modalInstance = $uibModal.open({
+                    templateUrl: 'banners.html',
+                    controller: 'banners_controller',
+                    resolve: {
+                        'EdittextWithHtml': function () {
+                            console.log(row.entity.html)
+                            return row.entity.html
+                        }
+                    }
+                });
+                modalInstance.result.then(function (returnedtext) {
+                    $scope.saveTranslWithHtml(returnedtext, row, col);
+                });
+            };
 
 
             $scope.sendData = function (grid_data, setdatafuctions) {
@@ -79,27 +79,62 @@
                 $scope.sendData(grid_data);
             };
 
-            $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
+            $scope.confirm_action = function (row_id, action_name, row, column_name) {
+                if (action_name === 'set_default') {
+                    $confirm('are you sure you want reset it to default value', row['default_value']).then(function (resp) {
+                        $ok('', {
+                            'action_name': action_name,
+                            'row': row,
+                            'id': row_id
+                        }, function (resp) {
+                            $scope.gridApi.grid.setGridData();
+                        });
+                    });
+                }
+                else {
+                    $ok('', {
+                        'action_name': action_name,
+                        'row': row,
+                        'id': row_id
+                    }, function (resp) {
+                        $scope.gridApi.grid.setGridData();
+                    });
+                }
+            }
+
+            $scope.gridOptions = $.extend({}, $scope.gridOptions, {
                 urlLoadGridData: $scope.url_banners,
                 columnDefs: [
                     {name: 'place'},
-
                     {
                         name: 'html', type: 'editable', subtype: 'tinymce',
                         modal: "grid.appScope.showModalForEdit(row, col, row.entity[col.field])",
                         filter: {type: 'input'}
                     },
-                    {name: 'actions', type: 'server_actions'}
+                    {name: 'actions', type: 'actions', 'onclick': 'confirm_action'}
                 ]
             });
-            {% endraw %}
+
         })
     </script>
 
-    {% raw %}
+    <script type="text/ng-template" id="portal_banners.html">
+        <div class="modal-header">
+            <h3 class="modal-title">{{ title }}</h3>
+        </div>
+        <div class="modal-body">
+            {{ question }}
+        </div>
+
+        <div class="modal-footer">
+            <button ng-repeat="b in buttons" class="btn {{b.class_name}}" ng-click="ans(b.answer)">{{ b.text }}</button>
+        </div>
+    </script>
+
+
 
     <div ng-controller="portal_banners" ng-cloak>
-        <div class="grid" id="grid1" ui-grid-pagination ui-grid-edit ui-grid="gridOptions1">
+        <div class="grid" id="grid1" ui-grid-pagination ui-grid-edit ui-grid="gridOptions">
             <div class="well grid-loading" ng-show="loading">
                 <i class="fa fa-spin fa-spinner"></i>
                 <div>{{ _('Data Loading...') }}</div>
