--- a/profapp/templates/messenger/messenger.html
+++ b/profapp/templates/messenger/messenger.html
@@ -145,7 +145,7 @@
                             check_for_unread_messages: true
                         }, function (resp) {
                             if ($scope.selected_chat_room_id && $scope.selected_chat_room_id === $scope.loading_chatroom_id) {
-                                $scope.update_chat_room(resp, false, true);
+                                $scope.update_chat_room(resp, false, true, true);
                             }
                         }).finally(function () {
                             if ($scope.selected_chat_room_id && $scope.selected_chat_room_id !== $scope.loading_chatroom_id) {
@@ -175,7 +175,7 @@
                         text: $scope.message_text
                     }, function (resp) {
                         $scope.message_text = '';
-                        $scope.update_chat_room(resp);
+                        $scope.update_chat_room(resp, false, true, false);
                     }).finally(function () {
                         if ($scope.loaded_chats[chatroom_id]) {
                             $scope.loaded_chats[chatroom_id]['sending_message'] = false;
@@ -198,7 +198,7 @@
             };
 
 
-            $scope.update_chat_room = function (resp, stick_to_top, force) {
+            $scope.update_chat_room = function (resp, stick_to_top, force, instant) {
                 if (resp['chat_room']) {
                     var chat_room_id = resp['chat_room']['chat_room_id'];
                     var chat_room = resp['chat_room'];
@@ -218,7 +218,7 @@
 
                     $scope.append_messages(chat_room['chat_room_id'], chat_room['messages']);
                     if ($scope.selected_chat_room_id === chat_room['chat_room_id']) {
-                        $scope.stickToBottom(chat_room['chat_room_id'], chat_room, stick_to_top, force);
+                        $scope.stickToBottom(chat_room['chat_room_id'], chat_room, stick_to_top, force, instant);
                     }
                 }
                 if (resp['unread_messages']) {
@@ -242,7 +242,7 @@
                     else {
                         $scope.contacts_unread_messages_in_unloaded_contacts_count += unread_messages_count;
                     }
-                    total_unread+= unread_messages_count;
+                    total_unread += unread_messages_count;
                 });
                 $.each($scope.contacts, function (cont_id, contact) {
                     if (!$scope.contacts_unread_messages[contact['chat_room_id']]) {
@@ -252,21 +252,33 @@
                 angularControllerFunction('user_controller', 'set_unread_message_count')(total_unread);
             }
 
-            $scope.stickToBottom = function (chatroom_id, fromserver, sticktotop, force) {
+            $scope.stickToBottom = function (chatroom_id, fromserver, sticktotop, force, instant) {
+
                 if (!force && (chatroom_id !== $scope.selected_chat_room_id || !fromserver || !fromserver['messages'] || !fromserver['messages'].length)) {
                     return false
                 }
-                var $elementold = $('#panel-body-chat ul');
+                var $elementold = $('#panel-scroll-chat ul');
                 var old_max_scroll = $elementold.length ? ($elementold.outerHeight() - $elementold.parent().height()) : 0;
                 $timeout(function () {
-                    var $element = $('#panel-body-chat ul');
+                    var $element = $('#panel-scroll-chat ul');
                     var max_scroll = $element.outerHeight() - $element.parent().height();
 
                     if (sticktotop && (force || $element.parent()[0].scrollTop < 10)) {
-                        $element.parent().animate({scrollTop: 0}, 250, "easeOutQuint");
+                        if (instant) {
+                            $element.parent().scrollTop(0);
+                        }
+                        else {
+                            $element.parent().animate({scrollTop: 0}, 250, "easeOutQuint");
+                        }
                     }
                     else if (!sticktotop && (force || $element.parent()[0].scrollTop > old_max_scroll - 10)) {
-                        $element.parent().animate({scrollTop: max_scroll}, 250, "easeOutQuint");
+                        if (instant) {
+                            $element.parent().scrollTop(max_scroll);
+                        }
+                        else {
+                            $element.parent().animate({scrollTop: max_scroll}, 250, "easeOutQuint");
+                        }
+
                     }
                 }, 0);
             };
@@ -419,6 +431,46 @@
 
             };
 
+            $scope.message_cant_be_sent = function () {
+                return $scope.message_text != '' && $scope.selected_chat_room_id && $scope.loaded_chats[$scope.selected_chat_room_id] && !$scope.loaded_chats[$scope.selected_chat_room_id]['loading'];
+            }
+
+            $scope.init_messenger = function () {
+                $scope.set_selected_menu('chat');
+                $scope.refresh_chats();
+                var elem = $('#messenger-controller textarea');
+
+                elem.bind('keydown', function (event) {
+                    var code = event.keyCode || event.which;
+
+
+                    if (code == 13) {
+                        if (event.ctrlKey) {
+                            var elhtml = elem[0];
+                            var val = elhtml.value;
+                            if (typeof elhtml.selectionStart == "number" && typeof elhtml.selectionEnd == "number") {
+                                var start = elhtml.selectionStart;
+                                elhtml.value = val.slice(0, start) + "\n" + val.slice(elhtml.selectionEnd);
+                                elhtml.selectionStart = elhtml.selectionEnd = start + 1;
+                            } else if (document.selection && document.selection.createRange) {
+                                elhtml.focus();
+                                var range = document.selection.createRange();
+                                range.text = "\r\n";
+                                range.collapse(false);
+                                range.select();
+                            }
+                        }
+                        else {
+                            $scope.send_message();
+                        }
+                        event.preventDefault();
+
+                    }
+
+
+                });
+            };
+
             {% raw %}
 
         }
@@ -428,7 +480,7 @@
 
 
     {% raw %}
-    <div ng-controller="messenger" ng-cloak ng-init="set_selected_menu('chat'); refresh_chats()">
+    <div ng-controller="messenger" id="messenger-controller" ng-cloak ng-init="init_messenger()">
 
         <div class="container">
             <div class="row reader-list-nav menu-company">
@@ -468,7 +520,8 @@
                                    ng-model-options='{ debounce: 500 }'
                                    ng-change="search_contacts(true)" ng-model="contacts_search_text"/>
 
-                            <div ng-show="contacts_loading" class="tac"><i class="fa fa-spinner">&nbsp;&nbsp;&nbsp;{{ _('Loading contacts') }}</i></div>
+                            <div ng-show="contacts_loading" class="tac"><i class="fa fa-spinner">&nbsp;&nbsp;&nbsp;{{
+                                _('Loading contacts') }}</i></div>
 
                             <div ng-show="!contacts_loading" class="contact-list">
 
@@ -496,10 +549,12 @@
                                 </ul>
 
 
-                                <div class="tac disabled" ng-show="!contacts.length && !contacts_search_text">{{ _('You have no
+                                <div class="tac disabled" ng-show="!contacts.length && !contacts_search_text">{{ _('You
+                                    have no
                                     contacts') }}
                                 </div>
-                                <div class="tac" ng-show="!contacts.length && contacts_search_text">{{ _('No contacts match
+                                <div class="tac" ng-show="!contacts.length && contacts_search_text">{{ _('No contacts
+                                    match
                                     search
                                     criteria') }}
                                 </div>
@@ -527,75 +582,81 @@
 
                             <div class="panel-body" id="panel-body-chat">
 
-                                <div ng-if="!selected_chat_room_id" class="chat tac disabled">{{ _('Please select user to chat with')
-                                    }}
-                                </div>
+                                <div class="panel-scroll-chat" id="panel-scroll-chat">
 
-                                <div ng-show="selected_chat_room_id && !loaded_chats[selected_chat_room_id]" class="chat tac">
-                                    <i class="fa fa-spinner">&nbsp;&nbsp;&nbsp;{{ _('Loading chat') }}</i>
-                                </div>
+                                    <div ng-if="!selected_chat_room_id" class="chat tac disabled">{{ _('Please select
+                                        user
+                                        to chat with')}}
+                                    </div>
 
-
-                                <ul class="chat" ng-if="selected_chat_room_id && loaded_chats[selected_chat_room_id]"
-                                    class="chat-session chat"
-                                    schroll-bottom-stick-to="schroll_stick_to"
-                                    schroll-bottom="loaded_chats[selected_chat_room_id]['messages']">
-
-                                    <li class="clearfix tac"
-                                        ng-show="selected_chat_room_id && loaded_chats[selected_chat_room_id]['there_is_older'] && !loaded_chats[selected_chat_room_id]['loading_older_messages']">
-                                        <a href="#" ng-click="load_older_messages()">{{ _('Load older') }}</a>
-                                    </li>
-
-                                    <li class="clearfix tac"
-                                        ng-show="selected_chat_room_id && loaded_chats[selected_chat_room_id]['there_is_older'] && loaded_chats[selected_chat_room_id]['loading_older_messages']">
-                                        <i class="fa fa-spinner">&nbsp;&nbsp;&nbsp;{{ _('Loading older messages') }}</i>
-                                    </li>
-
-                                    <li class="clearfix"
-                                        ng-show="selected_chat_room_id && !loaded_chats[selected_chat_room_id]['there_is_older'] && loaded_chats[selected_chat_room_id]['messages'].length">
-                                        <div class="tac disabled">{{ _('There is no older messages') }}</div>
-                                    </li>
-
-                                    <li ng-show="selected_chat_room_id && !loaded_chats[selected_chat_room_id]['messages'].length"
-                                        class="clearfix">{{ _('There is no messages in this chat') }}
-                                    </li>
+                                    <div ng-show="selected_chat_room_id && !loaded_chats[selected_chat_room_id]"
+                                         class="chat tac">
+                                        <i class="fa fa-spinner">&nbsp;&nbsp;&nbsp;{{ _('Loading chat') }}</i>
+                                    </div>
 
 
-                                    <li ng-repeat="message in loaded_chats[selected_chat_room_id]['messages']"
-                                        ng-class="{'right': message['from_user_id'] == me_user_id, 'left': message['from_user_id'] != me_user_id}"
-                                        class="clearfix">
-                                        <div ng-if="message.session" class="tac"><span style="color: red;">{{ _('chat session started %(chat_session_start)s', {chat_session_start: moment(message.cr_tm)}) }}</span>
-                                        </div>
+                                    <ul class="chat"
+                                        ng-if="selected_chat_room_id && loaded_chats[selected_chat_room_id]"
+                                        class="chat-session chat" id="panel-body-chat-messages"
+                                        schroll-bottom-stick-to="schroll_stick_to"
+                                        schroll-bottom="loaded_chats[selected_chat_room_id]['messages']">
+
+                                        <li class="clearfix tac"
+                                            ng-show="selected_chat_room_id && loaded_chats[selected_chat_room_id]['there_is_older'] && !loaded_chats[selected_chat_room_id]['loading_older_messages']">
+                                            <a href="#" ng-click="load_older_messages()">{{ _('Load older') }}</a>
+                                        </li>
+
+                                        <li class="clearfix tac"
+                                            ng-show="selected_chat_room_id && loaded_chats[selected_chat_room_id]['there_is_older'] && loaded_chats[selected_chat_room_id]['loading_older_messages']">
+                                            <i class="fa fa-spinner">&nbsp;&nbsp;&nbsp;{{ _('Loading older messages')
+                                                }}</i>
+                                        </li>
+
+                                        <li class="clearfix"
+                                            ng-show="selected_chat_room_id && !loaded_chats[selected_chat_room_id]['there_is_older'] && loaded_chats[selected_chat_room_id]['messages'].length">
+                                            <div class="tac disabled">{{ _('There is no older messages') }}</div>
+                                        </li>
+
+                                        <li ng-show="selected_chat_room_id && !loaded_chats[selected_chat_room_id]['messages'].length"
+                                            class="clearfix">{{ _('There is no messages in this chat') }}
+                                        </li>
+
+
+                                        <li ng-repeat="message in loaded_chats[selected_chat_room_id]['messages']"
+                                            ng-class="{'right': message['from_user_id'] == me_user_id, 'left': message['from_user_id'] != me_user_id}"
+                                            class="clearfix">
+                                            <div ng-if="message.session" class="tac"><span style="color: red;">{{ _('chat session started %(chat_session_start)s', {chat_session_start: moment(message.cr_tm)}) }}</span>
+                                            </div>
                                     <span class="chat-img"
                                           ng-class="{'pull-right': message['from_user_id'] == me_user_id, 'pull-left': message['from_user_id'] != me_user_id}">
                                         <img class="messenger-avatar" pr-image-position="center center"
                                              pr-image-url="{{ loaded_chats[selected_chat_room_id]['users'][message['from_user_id']]['avatar']['url'] }}"/>
                                     </span>
-                                        <div style="color: #f00; font-size: 8px">{{ moment(message.cr_tm) }}
-                                        </div>
-                                        <div class="chat-body clearfix">
-                                            <div class="header">
-                                                <small class=" text-muted"> </small>
-                                                <strong class="primary-font"
-                                                        ng-class="{'pull-right': message['from_user_id'] == me_user_id, 'pull-left': message['from_user_id'] != me_user_id}">{{
-                                                    (message['from_user_id'] ==
-                                                    me_user_id)?_('You'):loaded_chats[selected_chat_room_id]['users'][message['from_user_id']]['full_name']
-                                                    }}</strong>
+                                            <div style="color: #f00; font-size: 8px">{{ moment(message.cr_tm) }}
                                             </div>
-                                            <p>{{ message.content }}</p>
-                                        </div>
-                                    </li>
-                                </ul>
+                                            <div class="chat-body clearfix">
+                                                <div class="header">
+                                                    <small class=" text-muted"> </small>
+                                                    <strong class="primary-font"
+                                                            ng-class="{'pull-right': message['from_user_id'] == me_user_id, 'pull-left': message['from_user_id'] != me_user_id}">{{
+                                                        (message['from_user_id'] ==
+                                                        me_user_id)?_('You'):loaded_chats[selected_chat_room_id]['users'][message['from_user_id']]['full_name']
+                                                        }}</strong>
+                                                </div>
+                                                <p>{{ message.content }}</p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="panel-footer">
                                 <div class="input-group">
                                 <textarea ng-model="message_text" id="btn-input" type="text"
                                           ng-disabled="!selected_chat_room_id || !loaded_chats[selected_chat_room_id] || loaded_chats[selected_chat_room_id]['loading']"
                                           class="form-control input-sm"
-                                          ctrl-enter="send_message()"
                                           placeholder="Type your message here..."></textarea>
                         <span class="input-group-btn">
-                            <button ng-disabled="message_text == '' || !selected_chat_room_id || !loaded_chats[selected_chat_room_id] || loaded_chats[selected_chat_room_id]['loading']"
+                            <button ng-disabled="!message_cant_be_sent()"
                                     ng-click="send_message()"
                                     class="btn btn-warning btn-sm" id="btn-chat">
                                 {{ _('Send message') }}</button>
@@ -623,7 +684,8 @@
                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                                 <img class="messenger-avatar" pr-image-position="center center"
                                      pr-image-url="{{ usr.avatar.url }}"/>
-                                <div class="nowrap" ng-bind-html="usr.full_name | highlight: community_search_text"></div>
+                                <div class="nowrap"
+                                     ng-bind-html="usr.full_name | highlight: community_search_text"></div>
                                 <br/>
                                 <br/>
                                 <button ng-disabled="usr.changing_contact"
